adeed 3 last section and footer

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <h6>Also available in dark.</h6>
                 <p class="section-holder__items-discriprion">Don't get blinded when using the H(app)y app at night, just turn off the lights. Lorem ipsum dolor sit amet.</p>
                 <div class="section-holder__items-img">
-                    <img src="./img/svg/tel-1.svg" alt="phone">
+                    <img src="./img/svg/tel-4.svg" alt="phone">
                 </div>
                 <hr>
                 <div class="section-holder__items-icons">
@@ -283,5 +283,117 @@
             </div>
         </div>
     </section>
+    <!-- end section 7 -->
+    <section class="wrapper">
+      <div class="wrapper__container">
+        <div class="wrapper__container-discriprion">
+          <p class="wrapper__container-discriprion__title">Testimonials</p>
+          <h6>Don't take our word for it.</h6>
+          <p class="wrapper__container-discriprion__text">See what our customers are saying.</p>
+        </div>
+        <div class="wrapper__container-comments">
+          <div class="wrapper__container-comments__list">
+            <div class="wrapper__container-inner">
+              <div class="wrapper__container-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus.</p>
+              </div>
+              <div class="wrapper__container-items">
+                <img src="./img/svg/name-1.svg" alt="photography">
+                <div class="wrapper__container-items__name">
+                  <p>Pam Beesly</p>
+                  <p>Dunder Mifflin</p>
+                </div>
+            </div>
+            </div>
+          </div>
+          <div class="wrapper__container-comments__list">
+            <div class="wrapper__container-inner">
+              <div class="wrapper__container-text">
+                <p>Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam. Aenean porta neque eget consequat fringilla.</p>
+              </div>
+              <div class="wrapper__container-items">
+                <img src="./img/svg/name-2.svg" alt="photography">
+                <div class="wrapper__container-items__name">
+                  <p>Michael Scott</p>
+                  <p>Dunder Mifflin</p>
+                </div>
+            </div>
+            </div>
+          </div>
+          <div class="wrapper__container-comments__list">
+            <div class="wrapper__container-inner">
+              <div class="wrapper__container-text">
+                <p>Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus.</p>
+              </div>
+              <div class="wrapper__container-items">
+                <img src="./img/svg/name-3.svg" alt="photography">
+                <div class="wrapper__container-items__name">
+                  <p>Angels Schrute</p>
+                  <p>Dunder Mifflin</p>
+                </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end section 8  -->
+<section class="box">
+  <div class="box-container">
+    <p>Download</p>
+    <h6>It's available right now!</h6>
+    <p>Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.</p>
+    <div class="box-container__img">
+      <img src="./img/svg/logo7.svg" alt="logo">
+    </div>
+  </div>
+</section>
+<!-- end section 9 -->
+<section class="row">
+  <div class="row-discription">
+    <div class="row-disctiption__title">
+      <h6>FAQ</h6>
+      <p>Some questions & some answers</p>
+    </div>
+    <div class="row-discription__desc">
+      <div class="row-disctiption__desc-text">
+        <p>What devices does H(app)y support?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.</p>
+      </div>
+      <div class="row-disctiption__desc-text">
+        <p>Will my photos magically be more beautiful if I use this app?</p>
+        <p>Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit.</p>
+      </div>
+      <div class="row-disctiption__desc-text">
+        <p>How many megapixels does H(app)y support?</p>
+        <p>Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+      </div>
+      <div class="row-disctiption__desc-text">
+        <p>How many photos can I store in H(app)y?</p>
+        <p>Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Etiam ut orci varius, faucibus libero ac, cursus quam. Aenean porta neque eget consequat fringilla.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- end section10 -->
+<footer class="footer">
+  <div class="foooter__inner">
+    <div class="footer__inner-logo">
+      <img src="./img/svg/logo-footer.svg" alt="logo">
+    </div>
+    <div class="footer__inner-items">
+      <img src="./img/svg/logo-f-1.svg" alt="logo">
+      <img src="./img/svg/logo-f-2.svg" alt="logo">
+      <img src="./img/svg/logo-f-3.svg" alt="logo">
+    </div>
+    <div class="footer__inner-desc">
+      <p>Powered by</p>
+      <p>Webflow.</p>
+      <p>All rights reserved by Happy Apps, Inc.</p>
+      <p>Licensing</p>
+    </div>
+  </div>
+</footer>
+<!-- end footer -->
   </body>
 </html>
